@@ -12,7 +12,7 @@ Do not use armv4 incopatible code
          SkASSERT((int16_t)y == y);
 --- a/src/build/common.gypi
 +++ b/src/build/common.gypi
-@@ -1096,6 +1096,7 @@
+@@ -1107,6 +1107,7 @@
                    # silences those warnings, as they are not helpful and
                    # clutter legitimate warnings.
                    '-Wno-abi',
