@@ -1,7 +1,7 @@
 Use system copy of libv8
 --- a/src/build/linux/system.gyp
 +++ b/src/build/linux/system.gyp
-@@ -257,6 +257,18 @@
+@@ -283,6 +283,18 @@
        }]]
      },
      {
@@ -22,7 +22,7 @@ Use system copy of libv8
        'conditions': [
 --- a/src/net/net.gyp
 +++ b/src/net/net.gyp
-@@ -711,7 +711,7 @@
+@@ -717,7 +717,7 @@
        'conditions': [
          ['javascript_engine=="v8"', {
            'dependencies': [
@@ -33,7 +33,7 @@ Use system copy of libv8
          ['chromeos==1', {
 --- a/src/build/all.gyp
 +++ b/src/build/all.gyp
-@@ -54,7 +54,7 @@
+@@ -55,7 +55,7 @@
        'conditions': [
          ['javascript_engine=="v8"', {
            'dependencies': [
@@ -180,7 +180,7 @@ Use system copy of libv8
  using WebKit::WebFrame;
 --- a/src/chrome/renderer/render_thread.cc
 +++ b/src/chrome/renderer/render_thread.cc
-@@ -92,7 +92,7 @@
+@@ -95,7 +95,7 @@
  #include "webkit/extensions/v8/benchmarking_extension.h"
  #include "webkit/extensions/v8/gears_extension.h"
  #include "webkit/extensions/v8/playback_extension.h"
@@ -290,7 +290,7 @@ Use system copy of libv8
  using WebKit::WebData;
 --- a/src/webkit/glue/webkitclient_impl.cc
 +++ b/src/webkit/glue/webkitclient_impl.cc
-@@ -40,7 +40,7 @@
+@@ -41,7 +41,7 @@
  #include "webkit/glue/weburlloader_impl.h"
  
  #if defined(OS_LINUX)
@@ -345,9 +345,9 @@ Use system copy of libv8
  
 --- a/src/chrome/renderer/extensions/chrome_app_bindings.cc
 +++ b/src/chrome/renderer/extensions/chrome_app_bindings.cc
-@@ -7,7 +7,7 @@
- #include "chrome/renderer/extensions/extension_renderer_info.h"
+@@ -11,7 +11,7 @@
  #include "chrome/renderer/render_thread.h"
+ #include "chrome/renderer/render_view.h"
  #include "third_party/WebKit/WebKit/chromium/public/WebFrame.h"
 -#include "v8/include/v8.h"
 +#include <v8.h>
@@ -400,7 +400,7 @@ Use system copy of libv8
  
 --- a/src/webkit/glue/webkit_glue.gypi
 +++ b/src/webkit/glue/webkit_glue.gypi
-@@ -472,7 +472,7 @@
+@@ -473,7 +473,7 @@
              ['inside_chromium_build==1 and component=="shared_library"', {
                'dependencies': [
                  '<(DEPTH)/third_party/WebKit/WebKit/chromium/WebKit.gyp:webkit',
